--- a/index.html
+++ b/index.html
@@ -8,3 +8,6 @@ Url: https://js-2afqyb.stackblitz.io/
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSCvfXtEZBAegkMe1zS4LQr9a3Ia6saucmMdM7oJ5sy91smKTY20F9hHl5NQ4D4gdQ8WLUju3BMFAW2/pubchart?oid=1169949976&amp;format=interactive"></iframe>
 
 <iframe title="Emisiones CO2" aria-label="Bar Chart" id="datawrapper-chart-J1YtA" src="//datawrapper.dwcdn.net/J1YtA/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important;" height="310"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var t in a.data["datawrapper-height"]){var e=document.getElementById("datawrapper-chart-"+t);e&&(e.style.height=a.data["datawrapper-height"][t]+"px")}})}();</script>
+
+<h1> AG2 </h1>
+<img src="https://i.ibb.co/Zmf33ZG/Dashboard-AG2.png" alt="Dashboard-AG2" border="0">
