--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@ Url: https://js-2afqyb.stackblitz.io/
 
 <h1> AG2 </h1>
 <img src="https://i.ibb.co/Zmf33ZG/Dashboard-AG2.png" alt="Dashboard-AG2" border="0">
+<h2> Mejora </h2>
+<img src="https://i.ibb.co/RSpMLqt/Dashboard-AG2-1.png" alt="Dashboard-AG2-1" border="0">
