--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<h1>Visualización – AG1 </h1>
+<head>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></script>
+</head>
+
+
+<h1>Visualización de Datos </h1>
 Nombre: Javier Sanz <br>
-Url: https://js-2afqyb.stackblitz.io/
+Url: <a href="https://js-2afqyb.stackblitz.io/"> https://js-2afqyb.stackblitz.io/ </a><br> <br>
+
+Url(github): <a href=" https://github.com/jasanhon/07MBIG---Visualizacion-de-Datos/blob/master/7_AG3.ipynb" > https://github.com/jasanhon/07MBIG---Visualizacion-de-Datos/blob/master/7_AG3.ipynb</a>
 
 <h2>CO2 - google sheet</h2>
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSCvfXtEZBAegkMe1zS4LQr9a3Ia6saucmMdM7oJ5sy91smKTY20F9hHl5NQ4D4gdQ8WLUju3BMFAW2/pubchart?oid=2048652474&amp;format=interactive"></iframe>
