--- a/index.html
+++ b/index.html
@@ -26,3 +26,14 @@ Url(github): <a href=" https://github.com/jasanhon/07MBIG---Visualizacion-de-Dat
 <img src="https://i.ibb.co/Zmf33ZG/Dashboard-AG2.png" alt="Dashboard-AG2" border="0">
 <h2> Mejora AG2</h2>
 <img src="https://i.ibb.co/RSpMLqt/Dashboard-AG2-1.png" alt="Dashboard-AG2-1" border="0">
+
+
+<h1>AG-3</h1><br>
+<h2> Gráfico de Barras</h2>
+<div id="viz1"></div>
+
+<h2> Reutilizar código. Barras</h2>
+<div id="viz2"></div>
+
+<h2>Caja y Bigotes o Burbujas</h2>
+<div id="viz3"></div>
